<resources>
    <string name="app_name">Calculator</string>
    <string name="app_namebold"><b>Calculator</b></string>
    <string name="aboutmebutton"><b>About me</b></string>
    <string name="normalbutton"><b>Simple</b></string>
    <string name="advancedbutton"><b>Advanced</b></string>
    <string name="exitbutton"><b>Exit</b></string>
    <string name="author">Piotr Sobieszek</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="doublezero">00</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="backspace">B</string>
    <string name="clear">C</string>
    <string name="power">^2</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="pi">pi</string>
    <string name="nawiasl">(</string>
    <string name="nawiasp">)</string>
    <string name="xdoy">x^y</string>
    <string name="percent">%</string>
    <string name="tg">tg</string>
    <string name="test">23094823084320985320131232133123</string>
</resources>