<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SimpleActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/tablerow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:layout_span="4"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonclear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonpower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/power"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonbackspace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttondivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonseven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttoneight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonnine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonmultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonfour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonfive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonsix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonminus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttontwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonthree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonplus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accent"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonzero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonzeros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/doublezero"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttondot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonequals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/additional1"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>