<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonsimple"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/button"
            android:text="@string/normalbutton"
            android:textColor="@color/white"
            tools:text="@string/normalbutton" />

        <Button
            android:id="@+id/buttonadvanced"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/button"
            android:text="@string/advancedbutton"
            android:textColor="@color/white"
            tools:text="@string/advancedbutton" />

        <Button
            android:id="@+id/buttonabout"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/button"
            android:text="@string/aboutmebutton"
            android:textColor="@color/white"
            tools:text="@string/aboutmebutton" />

        <Button
            android:id="@+id/buttonexit"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/button"
            android:text="@string/exitbutton"
            android:textColor="@color/white"
            tools:text="@string/exitbutton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>